# rust-aside

./: Cargo.toml  README.md  test.txt
benches/: my_benchmark.rs
minigrep/: Cargo.toml
minigrep/src/: config.rs  lib.rs  main.rs  run.rs  search.rs
problems/: Cargo.toml  README.md
problems/src/: lib.rs  main.rs  p10_LinkedList.rs  p10_LinkedList2.rs  p4_merge_sorted_arrays.rs  p5_move_zeros.rs  p6_contains_duplicate.rs  p8_max_sub_array.rs
src/: lib.rs  main.rs  p1_contain_common_number.rs  p2_two_sum.rs  p3_reverse_string.rs  p4_merge_sorted_arrays.rs  p7_rotate_array.rs  p9_first_recurring_char.rs
tests/: lib.rs
web-server/: hello.html
web-server/src/: lib.rs  main.rs
web-server2/: Cargo.toml  README.md
web-server2/public/: 404.html  hello.html
web-server2/src/: handle_request.rs  lib.rs  main.rs  message.rs  thread_pool.rs  worker.rs
web-server2/src/thread_pool/: job.rs  message.rs  mod.rs  thread_pool.rs  worker.rs
web-server3/: Cargo.toml
web-server3/public/: 404.html  index.html
web-server3/src/: lib.rs  main.rs  thread_pool.rs  worker.rs
web-server4/: Cargo.toml
web-server4/public/: 404.html  index.html
web-server4/src/: lib.rs  main.rs
