[package]
name = "rust-workshop"
version = "0.1.0"
authors = ["Hossam Magdy <hossam.magdy@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'unwind' # see: https://doc.rust-lang.org/book/ch09-01-unrecoverable-errors-with-panic.html

[dependencies]
structopt = "0.3.21" # Reading CLI arguments
anyhow = "1.0" # Error handling / bubbling `with_context`
log = "0.4"
env_logger = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
